--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
   <body>
 
 
-    <form name="contact" netlify netlify-honeypot="bot-field" action='/' hidden>
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="name" />
       <input type="email" name="email" />
       <textarea name="message"></textarea>
