--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Frontend developer proficient in Javascript and React"
+      content="Mobile Engineer proficient in Javascript and React Native"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/mylogo_small.png" />
     <!--
@@ -21,7 +21,7 @@
       rel="stylesheet"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Okikiola Omotosho - Frontend Developer</title>
+    <title>Okikiola Omotosho - Mobile Engineer</title>
   </head>
   <body>
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
